--- a/aesthetics.html
+++ b/aesthetics.html
@@ -27,12 +27,12 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -40,8 +40,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -63,9 +63,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -114,7 +114,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -143,7 +143,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -204,7 +204,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -357,7 +357,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · shy baby bun ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/cyb4VFc.png">
+<img height="auto" width="220" src="https://i.imgur.com/cyb4VFc.png">
 <br><br>
 </div>
 <br><br>
@@ -368,7 +368,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · soft ballerina ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/z9GJPs0.png">
+<img height="auto" width="220" src="https://i.imgur.com/z9GJPs0.png">
 <br><br>
 </div>
 <br><br>
@@ -379,7 +379,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · white rabbit ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/PhBUvFJ.png">
+<img height="auto" width="220" src="https://i.imgur.com/PhBUvFJ.png">
 <br><br>
 </div>
 <br><br>
@@ -401,7 +401,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · forest fairy ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/0b6vXXe.png">
+<img height="auto" width="220" src="https://i.imgur.com/0b6vXXe.png">
 <br><br>
 </div>
 <br><br>
@@ -412,7 +412,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · romantic witch ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/5wLcG9c.png">
+<img height="auto" width="220" src="https://i.imgur.com/5wLcG9c.png">
 <br><br>
 </div>
 <br><br>
@@ -423,7 +423,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · little rat ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/7Bxbyl7.png">
+<img height="auto" width="220" src="https://i.imgur.com/7Bxbyl7.png">
 <br><br>
 </div>
 <br><br>
@@ -434,7 +434,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · internet kid ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/5rLwKB4.png">
+<img height="auto" width="220" src="https://i.imgur.com/5rLwKB4.png">
 <br><br>
 </div>
 <br><br>
@@ -445,7 +445,7 @@ here are some photos that i carefully selected and fit in my favorite aesthetics
 · dirty socks ·
 </font>
 <br><br>
-<img height="auto" width="220" src="http://i.imgur.com/9G205Q9.png">
+<img height="auto" width="220" src="https://i.imgur.com/9G205Q9.png">
 <br><br>
 </div>
 <br><br>
