--- a/bearcare.html
+++ b/bearcare.html
@@ -27,12 +27,12 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -40,8 +40,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -63,9 +63,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -114,7 +114,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -143,7 +143,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -204,7 +204,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -340,7 +340,7 @@ position: relative;
 <br><br>
 <br>
 <center>
-<object width="300" height="250" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"><param value="https://files.catbox.moe/ty0njy.swf" name="movie" /><param value="high" name="quality" /><embed width="300" height="250" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" quality="high" src="https://files.catbox.moe/ty0njy.swf"></embed></object>
+<object width="300" height="250"><param value="https://files.catbox.moe/ty0njy.swf" name="movie"/><param value="high" name="quality"/><embed width="300" height="250" type="application/x-shockwave-flash" quality="high" src="https://files.catbox.moe/ty0njy.swf"></embed></object>
 
 <br><br>
 <font family = "Verdana"><font color="#675656"><font size="1">﻿instructions : take care of your bear with love ! feed, bathe, play with it and put it to sleep !<br>
