--- a/blog.html
+++ b/blog.html
@@ -27,13 +27,13 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -41,8 +41,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -64,9 +64,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -115,7 +115,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -144,7 +144,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -205,7 +205,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -447,7 +447,7 @@ i really enjoyed painting the little flowers on the dress, it was very relaxing.
 <br>
 today i decided to answer to you several doubts and curiosities related to the changes that have happened in my social media over the last years.<br>
 <br><br>
-<center><img src="http://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="http://i.imgur.com/gCof63R.gif"/></center>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
 <br><br>
 　　　𝚖𝚊𝚒𝚗 𝚙𝚊𝚐𝚎 𝚊𝚗𝚍 𝚝𝚞𝚖𝚋𝚕𝚛 𝚋𝚕𝚘𝚐 𝚊𝚎𝚜𝚝𝚑𝚎𝚝𝚒𝚌 𝚌𝚑𝚊𝚗𝚐𝚎𝚜 _<br>
 i created the page with a friend and the tumblr blog later, in order to improve the content of the page, improving its aesthetics. the problem is that our opinions were very different and she posted things very different from me, so everything was a mess. so far so good, but the biggest problem was that she liked to post things from kink blogs and lots of offensive stuff that i think it's very bad and ruined the page environment completely. our friendship dissolved over time ( not only because of that ) and she decided she didn't want to post on the page or tumblr anymore for lack of time, so i erased all the content that i definitely hate and left everything clean and neat again. posting alone i could have control over the content quality and aesthetics. i hope that everything has been completely deleted, i'm very ashamed of this past. if you find anything, PLEASE let me know !<br>
@@ -598,7 +598,7 @@ i'll add these in the faq :<br>
 ... of course i would not leave the post with just that, it would be shameful.<br>
 i have something much more important to post on today's q&a, super very extremely important :<br>
 <br><br>
-<center><img src="http://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="http://i.imgur.com/gCof63R.gif"/></center>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
 <br><br>
 i would like to talk about these two adjectives that are so confusing to people : pure & innocent.<br>
 these are actually extremely important things, but are treated as something far, almost impossible to achieve. and that's not true, because it's something we can all go back to.<br>
@@ -733,7 +733,7 @@ because of the other post where i say that i don't like people to "guess" my per
 i'm actually quite honored that you really care about me that way, it's very sweet <img src="https://i.imgur.com/WatUq79.gif"/><br>
 i thought about it for a while, i don't really like to talk about myself so deeply, but since this is a more personal post... here it is :<br>
 <br><br>
-<center><img src="http://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="http://i.imgur.com/gCof63R.gif"/></center>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
 <br><br>
 　　　　　𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈 :<br>
 <br>
