--- a/credits.html
+++ b/credits.html
@@ -27,13 +27,12 @@
 
 <title>middlepot ഒ</title>
 
-<link rel="shortcut icon" href="http://i.imgur.com/C7cSCvF.gif">
+<link rel="shortcut icon" href="https://i.imgur.com/C7cSCvF.gif">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="description" content="・゜ ♡   。・　゜ ♡   。・゜ ♡   ゜・。。 ♡　。・゜ ♡ ・  。・゜ ♡   ・゜ ♡ ゜・。 ・ ♡ °  . 。 ♡  .">
 <style>
 body{ 
-  cursor: url(http://i.imgur.com/xrySzI4.png), progress;}
-a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
+  cursor: url(https://i.imgur.com/xrySzI4.png), progress;}
+a:hover {cursor: url(https://i.imgur.com/LY1tJ6u.png), progress;
   
   }
  ::selection {text-shadow: 0 0 2px #ddd3ce;color:#afa7a3}
@@ -41,8 +40,8 @@ a:hover {cursor: url(http://i.imgur.com/LY1tJ6u.png), progress;
 }
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
@@ -64,9 +63,9 @@ border: 1px solid #C1A3A3;
 tooooooooltip
 -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script src="http://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
 <script>
 
@@ -115,7 +114,7 @@ z-index:9999;
 <!--
 menuuuuuuuuuuuuuuu
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css">
@@ -144,7 +143,7 @@ menuuuuuuuuuuuuuuu
 			#context_menu ul li {
 				padding: 4px 3px;
 				-moz-border-radius: 10px 10px;
-				cursor: url(http://i.imgur.com/xrySzI4.png), progress;
+				cursor: url(https://i.imgur.com/xrySzI4.png), progress;
 			}
 			
 			#context_menu ul li:hover {
@@ -205,7 +204,7 @@ menuuuuuuuuuuuuuuu
 
 <script>
 function popcbox(tid, tkey) {
-	var baseurl = "http://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
+	var baseurl = "https://www5.cbox.ws/box/?boxid=884320&boxtag=v1q22y",
 		baseid = '5-884320',
 		fontop = 0;
 		turl = '',
@@ -340,7 +339,7 @@ position: relative;
 
 <br><br><br>
 <center>
-<img src="http://i.imgur.com/Ron7raE.png"><br>
+<img src="https://i.imgur.com/Ron7raE.png"><br>
 <!--------------------caixinha------------------------>
 <script type="text/javascript"> 
 iens6=document.all||document.getElementById
@@ -353,9 +352,9 @@ document.write('<div id="content" style="position:absolute;width:190px;top:6px;t
 }
 </script>
 <!-------------------------coisinhas---------------------------->
-<center><img src="http://i.imgur.com/K8OaAP1.png"></center>
+<center><img src="https://i.imgur.com/K8OaAP1.png"></center>
 <br>
-<center><img src="http://i.imgur.com/AplUTKO.gif"> middlepot disclaimer <img src="http://i.imgur.com/AplUTKO.gif"></center><br>
+<center><img src="https://i.imgur.com/AplUTKO.gif"> middlepot disclaimer <img src="https://i.imgur.com/AplUTKO.gif"></center><br>
 <style>
 #pt { color: #E07B99; }
 </style>
@@ -376,7 +375,7 @@ it is recommended that you consult our disclaimer regularly in order to continua
 
 
 
-<center><img src="http://i.imgur.com/AplUTKO.gif"> política de privacidade middlepot <img src="http://i.imgur.com/AplUTKO.gif"></center>
+<center><img src="https://i.imgur.com/AplUTKO.gif"> política de privacidade middlepot <img src="https://i.imgur.com/AplUTKO.gif"></center>
 <br><br>
 essa página de créditos contém todas as informações necessárias sobre os projetos aqui contidos até o momento, portanto, ela será frequentemente atualizada conforme o necessário. antes de se manifestar de qualquer forma, leia esta página até o fim. se você sentir que deve ter seu nome aqui por qualquer razão, por favor use o formulário de contato para me notificar e eu farei o possível. qualquer manifestação em local impróprio ou com palavras ofensivas serão ignoradas e excluídas sem aviso prévio.<br><br>
 o conteúdo de middlepot é fornecido "tal como está" e, portanto, não dá garantias de nenhum tipo, expressa ou implícita em toda a extensão permitida pela lei aplicável. middlepot não é responsável por qualquer dano ( incluindo perda de tempo ) devido a usar o site. middlepot reserva o direito de recusar o serviço a qualquer pessoa, em qualquer momento, e para remover qualquer coisa, conteúdos ou comunicações por qualquer motivo, a qualquer momento e sem aviso prévio.<br><br>
@@ -399,7 +398,7 @@ document.write('</div></div>')
 
 <table width="200px"><td><div align="right">
 
-<a href="#" onMouseover="moveup()" onMouseout="clearTimeout(moveupvar)" ><img src="http://i.imgur.com/ExriANt.gif"/></a><a href="#" onMouseover="movedown()" onMouseout="clearTimeout(movedownvar)" > <img src="http://i.imgur.com/DRC6i9K.gif"/></a></div></td></table>
+<a href="#" onMouseover="moveup()" onMouseout="clearTimeout(moveupvar)" ><img src="https://i.imgur.com/ExriANt.gif"/></a><a href="#" onMouseover="movedown()" onMouseout="clearTimeout(movedownvar)" > <img src="https://i.imgur.com/DRC6i9K.gif"/></a></div></td></table>
 
 <script language="JavaScript1.2">
 if (iens6){
@@ -502,7 +501,7 @@ moveupvar=setTimeout("moveup()",20)
 </font></font></font>
 <font family = "Verdana"><font color="#B3A49A"><font size="1"><i>
 * i'll update this list whenever i change a hosting.<br>
-* these sites are safe but not all of them use https. privacy policy and use of cookies should be checked on the related websites.</i></font></font></font><br><br><br>
+* these sites are safe and all of them use https. privacy policy and use of cookies should be checked on the related websites.</i></font></font></font><br><br><br>
 
 <font family = "Verdana"><font color="#B3A49A"><font size="1">
 <b>[ important safety tips ]</b><br>
@@ -510,7 +509,7 @@ i'm sorry, i know this website uses a lot of cookies !<br>
 this is because of the hosting sites and scripts. they are safe and i never had problems with them, also cookies exist to make your experience better and improve your visits according to your standards.<br>
 some people hate this, and i understand. it is not always pleasant, but i think it's important in some cases.<br>
 that's okay if you don't like them. you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
-also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ), because not all these websites use ssl.<br>
+also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ), because i have no guarantee that all these websites will continue to use ssl forever.<br>
 if you don't like javascript or flash, you can disable it too in your browser settings, but i do not suggest this one because it will mess up the layout and consequently your experience on this website.<br>
 <b>i always try to keep the visitors safe and alert, so please, any questions or safety issues feel free to <a href="http://middlepot.com/contact" id="linkbjinho" target="_blank" >contact me</a> !</b>
 </font></font></font>
