--- a/index.html
+++ b/index.html
@@ -292,18 +292,18 @@ position: relative;
 
 <div onselectstart="return false" id="menu1">
 
-　　&nbsp;<a href="http://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
+　　&nbsp;<a href="https://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/about">about</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/links">links</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/contact">contact</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/credits">credits</a></font>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/about">about</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/links">links</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/contact">contact</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/credits">credits</a></font>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
 
 <center>　　<img src="https://i.imgur.com/HA2l4dB.gif"/>
- <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="http://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
+ <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="https://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
 
 <p style="font-size:10px;line-height:50%;">
 <br></p>
@@ -312,14 +312,14 @@ position: relative;
 <br></p>
 
 <center><div id="aaa"><img src="https://i.imgur.com/93DE8B0.png"/><br>
-<a href="http://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
-<a href="http://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
-<a href="http://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
-<a href="http://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
-<a href="http://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
-<a href="http://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
-<a href="http://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
-<a href="http://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
+<a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
+<a href="https://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
+<a href="https://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
+<a href="https://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
+<a href="https://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
+<a href="https://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
+<a href="https://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
+<a href="https://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
 <img src="https://i.imgur.com/op6oXma.png"/></div></center>
 
 <p style="font-size:10px;line-height:70%;">
@@ -331,7 +331,7 @@ position: relative;
 
 <div id="menu2">
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="http://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="http://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="http://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="http://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="http://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="http://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="http://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
 
 
 </div>
@@ -344,14 +344,14 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+06/15 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
+06/14 <img src="https://i.imgur.com/y9S1bJ8.gif"> ssl on: <font color="#DFB7B7">all my stuff !!!</font><br>
 06/12 <img src="https://i.imgur.com/y9S1bJ8.gif"> music on: <font color="#DFB7B7">potetomid</font><br>
 06/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> game on: <font color="#DFB7B7">gaming page</font><br>
 06/07 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 06/07 <img src="https://i.imgur.com/y9S1bJ8.gif"> look idea on: <font color="#DFB7B7">look book</font><br>
 06/05 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">gaming page</font><br>
 06/04 <img src="https://i.imgur.com/y9S1bJ8.gif"> music on: <font color="#DFB7B7">potetomid</font><br>
-06/03 <img src="https://i.imgur.com/y9S1bJ8.gif"> text on: <font color="#DFB7B7">tiny journal</font><br>
-06/01 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 </div></center>
 
 <br>
@@ -361,10 +361,10 @@ position: relative;
 <textarea style="height:8px; width:50px;  border:1px dashed #8A2316; -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     -khtml-border-radius: 20px;
-    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="http://middlepot.com/"><img src="https://i.imgur.com/SS3uOVJ.png"></a></textarea>
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com/"><img src="https://i.imgur.com/SS3uOVJ.png"></a></textarea>
 <br><br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . june . 12</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . june . 15</font></font></font>
 <br>
 <br><br>
 <br><br>
