--- a/archive.html
+++ b/archive.html
@@ -291,18 +291,18 @@ position: relative;
 
 <div onselectstart="return false" id="menu1">
 
-　　&nbsp;<a href="http://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
+　　&nbsp;<a href="https://middlepot.com"><img width="100px" height="auto" src="https://i.imgur.com/4XdG5rK.png"/></a><br><center><font color="#A08D7E">　© middlepot.com</font></center>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/about">about</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/links">links</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/contact">contact</a></font><br>
-　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="http://middlepot.com/credits">credits</a></font>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/about">about</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/links">links</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/contact">contact</a></font><br>
+　　　　<img src="https://i.imgur.com/p4C6BSA.png"/>&nbsp;&nbsp;<font color="#938373"><a id="linkzinho" href="https://middlepot.com/credits">credits</a></font>
 <p style="font-size:10px;line-height:50%;">
 <br><br><br></p>
 
 <center>　　<img src="https://i.imgur.com/HA2l4dB.gif"/>
- <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="http://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
+ <font color="#6E6156"><font size="2"><sup><a id="linkzinhoo" href="https://middlepot.com/blog">news blog</a></sup></font></font> <img src="https://i.imgur.com/VV0vQHD.gif"/></center>
 
 <p style="font-size:10px;line-height:50%;">
 <br></p>
@@ -311,14 +311,14 @@ position: relative;
 <br></p>
 
 <center><div id="aaa"><img src="https://i.imgur.com/93DE8B0.png"/><br>
-<a href="http://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
-<a href="http://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
-<a href="http://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
-<a href="http://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
-<a href="http://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
-<a href="http://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
-<a href="http://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
-<a href="http://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
+<a href="https://middlepot.com/milky-woods"><img src="https://i.imgur.com/43guVp5.png"/></a><br>
+<a href="https://middlepot.com/not-bad"><img src="https://i.imgur.com/OlFt7cw.png"/></a><br>
+<a href="https://middlepot.com/puporipot"><img src="https://i.imgur.com/m7ehqeT.png"/></a><br>
+<a href="https://middlepot.com/crwel-friends"><img src="https://i.imgur.com/czEnR0y.png"/></a><br>
+<a href="https://middlepot.com/fairy-loli"><img src="https://i.imgur.com/aJzy5nD.png"/></a><br>
+<a href="https://middlepot.com/potetomid"><img src="https://i.imgur.com/yE0iyO0.png"/></a><br>
+<a href="https://middlepot.com/soft-collection"><img src="https://i.imgur.com/k4KPMRn.png"/></a><br>
+<a href="https://middlepot.com/moep"><img src="https://i.imgur.com/MkgULzx.png"/></a><br>
 <img src="https://i.imgur.com/op6oXma.png"/></div></center>
 
 <p style="font-size:10px;line-height:70%;">
@@ -330,7 +330,7 @@ position: relative;
 
 <div id="menu2">
 
-<img src="https://i.imgur.com/PTzpVdh.png"/><a href="http://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="http://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="http://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="http://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="http://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="http://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="http://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
+<img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/status"><img src="https://i.imgur.com/gtWd2tI.png"/></a><a href="https://middlepot.com/look-book"><img src="https://i.imgur.com/21R6rOA.png"/></a><a href="https://middlepot.com/portfolio"><img src="https://i.imgur.com/5UlJkeC.png"/><a href=""></a><a href="https://middlepot.com/help"><img src="https://i.imgur.com/f6GSYqr.png"/></a><a href="https://middlepot.com/gaming"><img src="https://i.imgur.com/5dSoAlZ.png"/></a><a href="https://middlepot.com/cemetery"><img src="https://i.imgur.com/FctiXzO.png"/></a><a href="https://middlepot.com/recommended"><img src="https://i.imgur.com/myWm2B5.png"/></a><img src="https://i.imgur.com/W6coopC.png"/>
 
 
 </div>
@@ -338,7 +338,7 @@ position: relative;
 <div id="stuff">
 
 <br><br>
-<center><font family = "Verdana"><font color="#E67474"><font size="1"><a href="http://middlepot.com/blog" id="linkbjinho">← back</a></font></font></font></center>
+<center><font family = "Verdana"><font color="#E67474"><font size="1"><a href="https://middlepot.com/blog" id="linkbjinho">← back</a></font></font></font></center>
 <br><br>
 
 <div style="position: absolute;
@@ -1307,7 +1307,7 @@ anyway i will keep the links page updated, and for security, the html files are 
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/7h0fpbK.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!olQGFLpY!l-eq3Sq_vPGKhJTMP4RgfB7PzDT5ugl9lPRhCw00dpM" id="linkbjinho" target="_blank">utf8conv .rar</a></center>
+<center><a href="https://mega.nz/#!EhxgDI7Q!N3fDjgpmwfI4wr3HB3uqFH05r16nCl3u_mrbyYingKk" id="linkbjinho" target="_blank">utf8conv .rar</a></center>
 </font></font></font>
 <br>
 <center>
@@ -1877,11 +1877,11 @@ maybe you noticed that i'm deactivating some inactive accounts, and that's becau
 the accounts that i keep online but inactive, is because i use them to keep contact with some people !<br>
 i don't keep contact with anyone specifically on dA, so i think it's for the best to just deactivate.<br>
 don't worry, i'm still going to make flash games and post here periodcly, as i promised !!<br>
-if you came here from my dA account, i'm sorry for the inconvenience, you can still play all the games right <a href="http://middlepot.com/milky-woods" id="linkbjinho" target="_blank">here</a><br>
+if you came here from my dA account, i'm sorry for the inconvenience, you can still play all the games right <a href="https://middlepot.com/milky-woods" id="linkbjinho" target="_blank">here</a><br>
 aaand, here is the little game :<br>
 <br><br>
 
-<center><a href="http://middlepot.com/honeytime" target="_blank"><img src="https://i.imgur.com/mytMMb1.png"/></a></center>
+<center><a href="https://middlepot.com/honeytime" target="_blank"><img src="https://i.imgur.com/mytMMb1.png"/></a></center>
 
 <br><br>
 <center>
@@ -2461,7 +2461,7 @@ based on other versions, i created my own version of this site, but offline. you
 <br>
 <br><br>
 
-<center><a href="https://mega.nz/#!IxYzlQiK!CoBTyz5HMg6HFN1jHmncgi06aX_w8lWTDu4aWrMAUnA" id="linkbjinho" target="_blank">offline ywot .rar</a></center>
+<center><a href="https://mega.nz/#!8xQV3YKY!az8Pm0JCqpdn-Aa5Dvr99_dx2KM8M56KPOVAIIc8R3s" id="linkbjinho" target="_blank">offline ywot .rar</a></center>
 </font></font></font>
 <br>
 <center>
