--- a/about.html
+++ b/about.html
@@ -329,9 +329,10 @@ position: relative;
 </div>
 
 <div id="menu2">
-
+<center>
 <img src="https://i.imgur.com/PTzpVdh.png"/><a href="https://middlepot.com/aesthetics"><img src="https://i.imgur.com/zvZ8Wx2.png"/></a><a href="https://middlepot.com/languages"><img src="https://i.imgur.com/rP5u6jK.png"/></a><img src="https://i.imgur.com/W6coopC.png"/></center>
 
+</center>
 
 </div>
 
